# Smart-Teaching-Service-System

./: .env.example  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  AGENT.md  AGENTS.md  CODE_REVIEW_FINAL.md  E2E_TEST_REPORT.md  E2E_TEST_REPORT_FINAL.md  Makefile  README.md  Smart Teaching Service System.md  TODO.md  commitlint.config.mjs  docker-compose.yml  docker-compose.yml.bak  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  work.md
.github/workflows/: ci.yml  pr-check.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: .env.test.example  Dockerfile  TEST_README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json  vitest.config.ts
backend-e-rust/: Cargo.toml  Dockerfile
backend-e-rust/src/: main.rs  middleware.rs
backend/prisma/: schema.prisma  seed-c4c5-verify.ts  seed.ts
backend/src/: app.ts
docs/: PROJECT-HANDOVER.md  api-versioning.md  b-test-cases.md  b-user-manual.md  database-design.md  development-specifications.md  mid-term_report.md  project-requirements.md  update-notes.md
docs/agent-guides/: C-coding-agent-guidelines.md
docs/apis/: A-information-management.md  (+6 more)
frontend/: .env.test  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
scripts/: codex-docker-run.sh  docker-dev-bootstrap.sh  docker-wait-ready.ps1  run-c4c5-verify-after-docker.ps1  verify-c4-c5.ps1
shared/: package-lock.json  package.json  tsconfig.json
(+313 files in other folders)
