[package]
name = "stss-e-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.0"
poem-openapi = { version = "5.0", features = ["swagger-ui"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
